--- a/netlify.toml
+++ b/netlify.toml
@@ -4,13 +4,13 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = ""
+# LANDING_BUTTON = ""
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = "Warhammer 40: Wrath & Glory"
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "Timeline"
+LANDING_PAGE = "Destiny"
 # (Optional) Site title on landing page
-LANDING_TITLE = "I love obsidian-zola! 💖"
+LANDING_TITLE = "Welcome to the Woven Fates Vault."
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/aknight2015/Woven-Fates"
