--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-# LANDING_BUTTON = ""
+LANDING_BUTTON = "Choose your Destiny"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = "Warhammer 40: Wrath & Glory"
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
